--- a/bundles/org.openhab.binding.mercedesme/pom.xml
+++ b/bundles/org.openhab.binding.mercedesme/pom.xml
@@ -11,6 +11,13 @@
   </parent>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20230618</version>
+      <scope>compile</scope>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
     <dependency>
       <groupId>com.google.protobuf</groupId>
