--- a/bundles/org.openhab.binding.mercedesme/pom.xml
+++ b/bundles/org.openhab.binding.mercedesme/pom.xml
@@ -10,6 +10,10 @@
     <version>4.1.0-SNAPSHOT</version>
   </parent>
 
+  <properties>
+    <bnd.importpackage>javax.measure.*;version="[2.1,3)"</bnd.importpackage>
+  </properties>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.json/json -->
     <dependency>
