--- a/bundles/org.openhab.binding.mercedesme/pom.xml
+++ b/bundles/org.openhab.binding.mercedesme/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <properties>
-    <bnd.importpackage>javax.measure.*;version="[2.1,3)"</bnd.importpackage>
+    <bnd.importpackage>javax.measure.*;version="[2.1,3)",!sun.nio.ch.*</bnd.importpackage>
   </properties>
 
   <dependencies>
@@ -29,7 +29,14 @@
       <version>3.24.2</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.11.0</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
+
 
   <artifactId>org.openhab.binding.mercedesme</artifactId>
 
