remove junit tests temporarely
Signed-off-by: Bernd Weymann <bernd.weymann@gmail.com>

--- a/bundles/org.openhab.binding.mercedesme/pom.xml
+++ b/bundles/org.openhab.binding.mercedesme/pom.xml
@@ -31,6 +31,17 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.openhab.tools.sat</groupId>
+        <artifactId>sat-plugin</artifactId>
+        <configuration>
+          <spotbugsExclude>${project.basedir}/suppressions.xml</spotbugsExclude>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
   <artifactId>org.openhab.binding.mercedesme</artifactId>
 
